# DeepL_Final_Project

./: .env  .gitignore  app.py  prompts.py  pyproject.toml  rag.py  test.ipynb  vec_store_setup.py
notebooks/: tests.ipynb  tf-idf.ipynb
notebooks/chroma/: chroma.sqlite3
